--- a/template/AbstractStateClass.ejs
+++ b/template/AbstractStateClass.ejs
@@ -4,34 +4,31 @@ import IllegalStateTransitionError from "./IllegalStateTransitionError";
 //###START_CUSTOMCODE1
 
 //###END_CUSTOMCODE1
-class Abstract<%= classname %>State {
+class Abstract<%= className %>State {
 //>>>> don't change the CUSTOM CODE comments, if you do generation will overwrite your code >>>>
 //###START_CUSTOMCODE2
 
 //###END_CUSTOMCODE2
 
-    setParentStateMachine(SM) {
-        this.SM = SM;
-    }
-
-    <% if (onEnterState) { %>
-    onEnterState() {
-
-    }
-    <% } %>
-
-    <% if (onExitState) { %>
-    onExitState() {
-
-    }
-    <% } %>
-
-
-    <% states.forEach(function(state) { %>
-    <%= state %>() {
-        throw new IllegalStateTransitionError();
-    }
-    <% } %>
+  setParentStateMachine(SM) {
+    this.SM = SM;
+  }
+  <% if (onEnterState) { %>
+  onEnterState() {
+    
+  }
+  <% }
+  if (onExitState) { %>
+  onExitState() {
+    
+  }
+  <% } 
+  for (let operation in specification.operations) {  
+      %>
+  <%= operation %>() {
+    throw new IllegalStateTransitionError();
+  }
+  <% }; %>
 
 }
 export default AbstractDoorState;
