Added State Class generation

--- a/template/StateClass.ejs
+++ b/template/StateClass.ejs
@@ -1,24 +1,35 @@
-import AbstractDoorState from "./AbstractDoorState";
+import AbstractDoorState from "./<%=abstractName%>";
+<% for (let transition in transitions) {  %>import <%= transitions[transition] %> from "./<%= transitions[transition] %>";
+<% }; %>
 //>>>> don't change the CUSTOM CODE comments, if you do generation will overwrite your code >>>>
 //###START_CUSTOMCODE1
-
+<%= section1 %>
 //###END_CUSTOMCODE1
-class OpenDoorState extends AbstractDoorState {
-  //>>>> don't change the CUSTOM CODE comments, if you do generation will overwrite your code >>>>
-  //###START_CUSTOMCODE2
-
-  //###END_CUSTOMCODE2
+class <%= className %> extends <%=abstractName%> {
+//>>>> don't change the CUSTOM CODE comments, if you do generation will overwrite your code >>>>
+//###START_CUSTOMCODE2
+<%= section2 %>
+//###END_CUSTOMCODE2
 
   constructor() {
     super();
   }
 
-  onEnterState() {}
-
-  onExitState() {}
-
-  close() {
-    return new ClosedDoorState();
-  }
+  <% if (onEnterState) { %>
+    onEnterState() {
+      
+    }
+    <% }
+    if (onExitState) { %>
+    onExitState() {
+      
+    }
+    <% } 
+    for (let transition in transitions) {  
+        %>
+    <%= transition %>() {
+      return new <%= transitions[transition] %>();
+    }
+    <% }; %>
 }
 export default OpenDoorState;
