--- a/template/StateClass.ejs
+++ b/template/StateClass.ejs
@@ -1,26 +1,29 @@
-import AbstractDoorState from "./<%=abstractName%>";
-<% for (let transition in allTransitions) {  %>import <%= transitions[transition] %> from "./<%= transitions[transition] %>";
-<% }; %>
+import <%= abstractName %> from "./<%=abstractName%>";
+<% for (let transition in allTransitions) {  -%>
+import <%= allTransitions[transition] %> from "./<%= allTransitions[transition] %>";
+<% }; -%>
 //>>>> don't change the CUSTOM CODE comments, if you do generation will overwrite your code >>>>
 //###START_CUSTOMCODE1
 <%= section1 %>
 //###END_CUSTOMCODE1
 class <%= className %> extends <%=abstractName%> {
-//>>>> don't change the CUSTOM CODE comments, if you do generation will overwrite your code >>>>
-//###START_CUSTOMCODE2
-<%= section2 %>
-//###END_CUSTOMCODE2
-
+  //>>>> don't change the CUSTOM CODE comments, if you do generation will overwrite your code >>>>
+  //###START_CUSTOMCODE2
+  <%= section2 %>
+  //###END_CUSTOMCODE2
+  
+  <% if (constructor) { -%>
   constructor() {
     super();
   }
 
-  <% if (onEnterState) { %>
+  <% }
+  if (onEnterState) { %>
   onEnterState() {
     
   }
   <% }
-  if (onExitState) { %>
+  if (onExitState) { -%>  
   onExitState() {
     
   }
