--- a/template/StateClass.ejs
+++ b/template/StateClass.ejs
@@ -1,15 +1,15 @@
-import <%= abstractName %> from "./<%=abstractName%>";
+import <%- abstractName %> from "./<%-abstractName%>";
 <% for (let transition in allTransitions) {  -%>
-import <%= allTransitions[transition] %> from "./<%= allTransitions[transition] %>";
+import <%- allTransitions[transition] %> from "./<%- allTransitions[transition] %>";
 <% }; -%>
 //>>>> don't change the CUSTOM CODE comments, if you do generation will overwrite your code >>>>
 //###START_CUSTOMCODE1
-<%= section1 %>
+<%- section1 %>
 //###END_CUSTOMCODE1
-class <%= className %> extends <%=abstractName%> {
+class <%- className %> extends <%-abstractName%> {
   //>>>> don't change the CUSTOM CODE comments, if you do generation will overwrite your code >>>>
   //###START_CUSTOMCODE2
-  <%= section2 %>
+  <%- section2 %>
   //###END_CUSTOMCODE2
   
   <% if (constructor) { -%>
@@ -29,8 +29,8 @@ class <%= className %> extends <%=abstractName%> {
   }
   <% } 
   for (let transition in transitions) {  %>
-  <%= transition %>() {
-    return new <%= transitions[transition] %>();
+  <%- transition %>() {
+    return new <%- transitions[transition] %>();
   }
   <% }; %>
 }
